2009-01-23  Vincent Untz  <vuntz@gnome.org>

	* backends/xml-backend.c: cygwin needs the same stuff as mingw, so use
	G_PLATFORM_WIN32
	Patch by <yselkowitz@users.sourceforge.net>
	Fix bug #563801.

2009-01-23  Vincent Untz  <vuntz@gnome.org>

	* gconf/gconftool.c: (do_toggle): return value at the end of the
	function.
	Patch by Magnus Boman <captain.magnus@gmail.com>. Fix bug #567334

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

=========================== 2.25.0 ===========================

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

	Bug 560559 – GNOME Goal: Remove deprecated GLib symbols

	* gconf/testclient.c: Replace deprecated GLib calls. Patch by
	Travis Veralrud.

	* gconf/Makefile.am: Remove commented-out mentions of testclient.c

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 565297 – a --toggle option for gconftool

	* gconf/gconftool.c: Add --toggle option

2008-12-08  Ray Strode  <rstrode@redhat.com>

	* gconf/gconfd.c: (logfile_save):
	Use fsync instead of fdatasync for portability
	(bug 563401).
	* backends/markup-tree.c (save_tree_with_locale):
	Also flush and sync here before closing (Patch
	from Richard Hult, bug 562976)

2008-12-02  Ray Strode  <rstrode@redhat.com>

	* gconf/gconfd.c: (logfile_save):
	sync saved state file to disk before closing
	(bug 562976)

2008-10-22  Christian Persch  <chpe@gnome.org>

	* gconf/gconftool-2.c: Add --search-key-regex; bug #557489.

2008-10-22  Christian Persch  <chpe@gnome.org>

	* defaults/gconf-defaults.c: (do_copy),
	(gconf_defaults_unset_mandatory): Fix some 'format not a string
	literal and no format arguments' warnings.

2008-10-22  Christian Persch  <chpe@gnome.org>

	* gconf/gconf-backend.c: (gconf_backend_unref): Fix one 'format not a
	string literal and no format arguments' warning.

2008-09-25  Tor Lillqvist  <tml@novell.com>
